# standard_python_environment

./: .dockerignore  .env  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  _config.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  docker.yml  lint.yml  pytest.yml
service/: Dockerfile  Dockerfile.test  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt
service/app/: Untitled.ipynb  main.ipynb  main.py
service/app/tests/: test_main.py  test_notebook.py
service/data/: sample.csv
service/tests/: test_main.py  test_notebook.py
service/workspace/: main.ipynb
service/workspace/.Trash-1000/info/: Untitled.ipynb.trashinfo
service/workspace/tests/: test_notebook.py
