[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "venv",
  "env",
  "__pycache__",
  "build",
  "dist"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-service"
version = "0.0.0"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["app", "data"]